--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ body {
   padding: 40px 15px;
 }
 
-/* ปรับการจัดรูปแบบของฟอร์ม */
 main {
   background: #ffffffcc;
   border-radius: 12px;
@@ -36,6 +35,15 @@ h2 {
   padding-bottom: 10px;
 }
 
+/* ปรับขนาดของ input date ใหญ่ขึ้น */
+input[type="date"] {
+  width: 100%;
+  padding: 15px; /* เพิ่มขนาด padding */
+  font-size: 1.2rem; /* เพิ่มขนาดฟอนต์ */
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
 /* กำหนดให้ input[type="radio"] ซ่อน */
 input[type="radio"] {
   display: none;
@@ -43,6 +51,7 @@ input[type="radio"] {
 
 /* กำหนดลักษณะของป้าย label */
 .options label {
+  background-color: #a5d6a7;  /* สีฟ้าเริ่มต้นพื้นหลัง */
   color: #0d47a1;
   border: 2px solid #ffffff;  /* กรอบสีขาว */
   border-radius: 6px;
