--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,6 @@ h2 {
   padding-bottom: 10px;
 }
 
-/* ปรับขนาดของ input date ใหญ่ขึ้น */
-input[type="date"] {
-  width: 100%;
-  padding: 15px; /* เพิ่มขนาด padding */
-  font-size: 1.2rem; /* เพิ่มขนาดฟอนต์ */
-  border-radius: 6px;
-  border: 1px solid #ccc;
-}
-
 /* กำหนดให้ input[type="radio"] ซ่อน */
 input[type="radio"] {
   display: none;
@@ -51,7 +42,6 @@ input[type="radio"] {
 
 /* กำหนดลักษณะของป้าย label */
 .options label {
-  background-color: #a5d6a7;  /* สีฟ้าเริ่มต้นพื้นหลัง */
   color: #0d47a1;
   border: 2px solid #ffffff;  /* กรอบสีขาว */
   border-radius: 6px;
@@ -64,7 +54,7 @@ input[type="radio"] {
   user-select: none; /* ป้องกันการเลือกข้อความ */
 }
 
-/* กำหนดสีของป้าย label ตั้งแต่เริ่มต้นตามคะแนน (0-4) */
+/* สีของป้าย label เมื่อไม่ได้เลือกคำตอบ (ตั้งแต่เริ่มต้น) */
 input[type="radio"][value="0"]:not(:checked) + label {
   background-color: #a5d6a7; /* สีฟ้า */
 }
