--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* เพิ่ม box-sizing เพื่อให้แสดงผลเหมือนกันในทุกอุปกรณ์ */
+ื/* เพิ่ม box-sizing เพื่อให้แสดงผลเหมือนกันในทุกอุปกรณ์ */
 * {
   box-sizing: border-box;
 }
@@ -35,13 +35,9 @@ h2 {
   padding-bottom: 10px;
 }
 
-/* กำหนดให้ input[type="radio"] ซ่อน */
-input[type="radio"] {
-  display: none;
-}
-
 /* กำหนดลักษณะของป้าย label */
 .options label {
+  background-color: #e3f2fd;  /* สีฟ้าอ่อนพื้นหลัง */
   color: #0d47a1;
   border: 2px solid #ffffff;  /* กรอบสีขาว */
   border-radius: 6px;
